IGNITE-25709 Open Java logging package for JDK 17